--- a/package.json
+++ b/package.json
@@ -10,10 +10,7 @@
     "clean": "rimraf .cache public",
     "lint:js": "eslint --cache --ext .js,.jsx --ignore-pattern public .",
     "lint:scss": "stylelint \"src/**/*.scss\"",
-    "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\"",
-    "test": "jest --config ./tests/jest-config.js",
-    "test:coverage": "jest --coverage --config ./tests/jest-config.js",
-    "test:watch": "jest --watch --config ./tests/jest-config.js"
+    "lint": "concurrently \"yarn run lint:js\" \"yarn run lint:scss\""
   },
   "repository": "https://github.com/alxshelepenok/gatsby-starter-lumen",
   "author": "Alexander Shelepenok <alxshelepenok@gmail.com>",
@@ -39,7 +36,6 @@
   "dependencies": {
     "bluebird": "^3.5.2",
     "classnames": "^2.2.6",
-    "codecov": "^3.1.0",
     "gatsby": "^2.0.116",
     "gatsby-link": "^2.0.10",
     "gatsby-plugin-catch-links": "^2.0.10",
@@ -78,34 +74,31 @@
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.3.4",
-    "@babel/preset-react": "7.0.0",
-    "@babel/preset-env": "7.3.4",
     "@babel/core": "7.3.4",
+    "@babel/plugin-proposal-class-properties": "7.3.4",
+    "@babel/plugin-proposal-optional-chaining": "7.2.0",
+    "@babel/preset-env": "7.3.4",
+    "@babel/preset-react": "7.0.0",
+    "autoprefixer": "9.5.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "23.6.0",
-    "identity-obj-proxy": "3.0.0",
-    "react-test-renderer": "16.8.4",
-    "jest": "23.6.0",
-    "jest-cli": "23.6.0",
-    "rimraf": "2.6.3",
+    "babel-eslint": "10.0.1",
+    "browserslist": "4.5.1",
     "concurrently": "4.1.0",
-    "stylelint": "9.10.1",
-    "stylelint-scss": "3.5.4",
-    "stylelint-config-recommended-scss": "3.2.0",
     "eslint": "5.15.3",
     "eslint-config-airbnb-base": "13.1.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jest": "22.4.1",
+    "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
     "eslint-watch": "5.0.1",
-    "babel-eslint": "10.0.1",
     "gh-pages": "2.0.1",
+    "identity-obj-proxy": "3.0.0",
     "lost": "8.3.1",
     "postcss-pxtorem": "4.0.1",
-    "autoprefixer": "9.5.0",
-    "browserslist": "4.5.1"
+    "react-test-renderer": "16.8.4",
+    "rimraf": "2.6.3",
+    "stylelint": "9.10.1",
+    "stylelint-config-recommended-scss": "3.2.0",
+    "stylelint-scss": "3.5.4"
   }
 }
